--- a/package.json
+++ b/package.json
@@ -19,11 +19,14 @@
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.5",
     "ethers": "^5.7.2",
+    "mime": "^3.0.0",
     "next": "13.0.5",
+    "nft.storage": "^7.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "4.9.3",
     "web3": "^1.8.1",
+    "web3.storage": "^4.4.0",
     "web3modal": "^1.9.10"
   },
   "devDependencies": {
