--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "web3modal": "^1.9.10"
   },
   "devDependencies": {
+    "@types/chart.js": "^2.9.37",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.19",
     "tailwindcss": "^3.2.4"
