--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
+    "@uniswap/widgets": "^2.20.1",
+    "@walletconnect/ethereum-provider": "^2.1.4",
     "@walletconnect/web3-provider": "^1.8.0",
     "axios": "^1.2.0",
     "chart.js": "2.9.3",
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.5",
     "ethers": "^5.7.2",
+    "jotai-immer": "^0.1.0",
     "mime": "^3.0.0",
     "next": "13.0.5",
     "nft.storage": "^7.0.0",
